<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:id="@+id/img1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="10dp"
            app:srcCompat="@drawable/logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="WOLFKNOGHTG"
            android:fontFamily="@font/sedgwick"
            android:textSize="24sp"
            android:textAlignment="center"
            android:layout_gravity="center"/>

    </LinearLayout>

    <EditText
        android:id="@+id/txNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingrese_su_nombre"
        android:textAlignment="center"
        android:inputType="text"
        android:layout_margin="25dp"/>

    <EditText
        android:id="@+id/txMedidaAncho"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/medida_de_ancho"
        android:textAlignment="center"
        android:inputType="numberDecimal"
        android:layout_margin="25dp" />

    <EditText
        android:id="@+id/txMedidaLargo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/medida_de_largo"
        android:textAlignment="center"
        android:inputType="numberDecimal"
        android:layout_margin="25dp"/>

    <EditText
        android:id="@+id/txPrecioMetro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/precio_por_metro"
        android:textAlignment="center"
        android:inputType="numberDecimal"
        android:layout_margin="25dp"/>

    <Button
        android:id="@+id/btCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/calcular_venta"
        android:backgroundTint="#c51162"
        android:textColor="#000"/>

</LinearLayout>